aerospike-proximus/gke/config/virtual-service-vector-search.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vector-search-vs
  namespace: aerospike
spec:
  hosts:
    - "*"
  gateways:
    - vector-search-gw
  http:
    - match:
        - uri:
            prefix: /
          port: 80
      route:
        - destination:
            port:
              number: 8080
            host: quote-semantic-search.aerospike.svc.cluster.local
    - match:
        - uri:
            prefix: /
          port: 5000
      route:
        - destination:
            port:
              number: 5000
            host: as-proximus-gke-aerospike-proximus.aerospike.svc.cluster.local
